# primebench

./: .env  Cargo.toml  README.md
src/: encode.rs  main.rs
